PIC-3361 Post static code analysis tidy up